

HEAD
====


v3.17 (2013-11-16)
==================
Enhancements:
- defs: add HX_SIZET_FMT and HX_LONGLONG_FMT
- support for Win64
Fixes:
- compile warnings on mingw were addressed


v3.16 (2013-09-29)
==================
Enhancements:
- format: remove 256-char format key length limit
Fixes:
- compile errors on mingw were addressed


v3.15 (2013-03-07)
==================
Enhancements:
- string: add HX_strchr2
- string: add HXQUOTE_URIENC mechanism for HX_strquote
Changes:
- defs: HXsizeof_member becomes FIELD_SIZEOF
  (to match the Linux kernel's macro name)


v3.14.1 (2012-12-31)
====================
Fixes:
- Restore forward-sorting order of ordered maps
  (revert "map: always have needle as second argument")


v3.14 (2012-11-14)
==================
Fixes:
- io: use pathconf(3) to determine dirent size for dir traversal
- rand: avoid division by zero when calling HX_irand with lo==hi
- time: use C++ static_cast syntax for C++ mode
- headers: improve operability with C89 compile mode


v3.13 (2012-07-28)
==================
Enhancements:
- defs: add DEMOTE_TO_PTR
- option: new HXOPT_RQ_ORDER flag, allows unconditional POSIX-style parsing
  (parsing terminates at first non-option encountered)
- option: add HXTYPE_SIZE_T
- time: add functions and macros for arithmetic and handling of timespec
  with support for negative time values
  * time: add HX_TIMESPEC_{EXP,FMT}
  * time: add HX_TIMEVAL_{EXP,FMT}
  * time: add the HX_timespec_isneg function
  * time: add the HX_timespec_neg function
  * time: add the HX_timespec_add function
  * time: add the HX_timespec_mul function
  * time: add the HX_timespec_mulf function
Changes:
- io: remove HX_REALPATH_SYMLINK
- time: rename HX_diff_timespec to HX_timespec_sub (old ABI kept)
- time: rename HX_diff_timeval to HX_timeval_sub (old ABI kept)
- string: make HX_memmem consider the special case of search_length=0
- string: optimize search_length=1 case in HX_memmem
- string: speed up HX_memmem searches for search_length >=2

