@@ -10,11 +10,8 @@
 /* Convert from wxString to UTF-8; limited validity */
 #define wxtu8(s)	static_cast<const char *>((s).ToUTF8())
 
-/* Common frame flags */
-#define wxCFF     (wxCAPTION | wxRESIZE_BORDER | wxSYSTEM_MENU | \
-                  wxCLOSE_BOX | wxMAXIMIZE_BOX | wxMINIMIZE_BOX)
 /* Common dialog flags */
-#define wxCDF     (wxCFF | wxFRAME_NO_TASKBAR)
+#define wxCDF     (wxDEFAULT_FRAME_STYLE | wxFRAME_NO_TASKBAR)
 #define wxACV     wxALIGN_CENTER_VERTICAL
 #define wxDPOS    wxDefaultPosition
 #define wxDSIZE   wxDefaultSize
