@@ -2,6 +2,8 @@
 
 HEAD
 ====
+Changes:
+- remove wxCFF from wx_helper.hpp
 
 
 v3.17 (2013-11-16)
